# library-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
architecture/: DISCUSSION.md
notebook/: 01_library_data_analysis.ipynb  02_prediction_model_training.ipynb
src/: common.py  exception.py  main.py
src/aggregation/: __init__.py  common.py
src/aggregation/app/: dataset.py
src/command/: __init__.py  create_dataset.py  ingest.py  predict.py  process_data.py  utils.py
src/config/: settings.toml
src/ingestion/: __init__.py  common.py
src/ingestion/app/: book.py  checkout.py  customer.py  library.py
src/transformation/: __init__.py  common.py
src/transformation/app/: book.py  checkout.py  customer.py  library.py
tests/: conftest.py  test_common.py
tests/ingestion/: test_common.py
tests/transformation/: test_common.py
tests/transformation/fixtures/: data.json
